my-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: ingress-redash
spec:
  tls:
    - hosts:
        - master.sergkharkin.ru
      secretName: letsencrypt-prod
  rules:
  - host: master.sergkharkin.ru
    http:
      paths:
      - backend:
          service:
            name: my-redash
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
